# mhash

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  acconfig.h  aclocal.m4  autogen.sh  bzero.c  configure  configure.ac  configure.in  crc32.c  driver.c  gosthash.c  hash_test.sh  haval.c  hmac_test.c  libdefs.h  libmhash.sym  mhash.c  mhash.h  mhash.spec  mhash.spec.in  mhash_0.6.1.orig.tar.gz.delta  mhash_0.6.1.orig.tar.gz.id  mhash_0.8.14.orig.tar.gz.delta  mhash_0.8.14.orig.tar.gz.id  mhash_0.9.1.orig.tar.gz.delta  mhash_0.9.1.orig.tar.gz.id  mhash_0.9.4a.orig.tar.gz.delta  mhash_0.9.4a.orig.tar.gz.id  mhash_0.9.6.orig.tar.gz.delta  mhash_0.9.6.orig.tar.gz.id  mhash_0.9.7.dfsg.orig.tar.gz.delta  mhash_0.9.7.dfsg.orig.tar.gz.id  (+16 more)
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
debian/: .gitattributes  .gitignore  changelog  clean  control  copyright  libmhash-dev.files  libmhash-dev.install  libmhash2.postinst  libmhash2.postrm  rules
debian/patches/: 0002-Fix-mhash_deinit-segfaults-with-snefru-and-whirlpool.patch  0007-autotools-namespace-stomping.patch  0011-spelling.patch  0015-mhash-0.9.9-no-free-before-use.patch  series
doc/: Makefile.am  Makefile.in  README.lib  digest.c  mhash.0  mhash.3  mhash.html  mhash.pod  sha1.txt  test.c
include/: Makefile.am  Makefile.in  mhash.h
include/mutils/: mhash.h  mhash_config.h.in  mincludes.h  mutils.h
lib/: Makefile.am  Makefile.in  bzero.c  crc32.c  haval.c  keygen_asis.c  keygen_s2k.c  mhash.c  mhash.h  sha1.c  snefru.c  stdfns.c
src/: Makefile.am  Makefile.in  driver.c  hash_test.sh
